--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "type": "git",
     "url": "git+https://github.com/ccbikai/cdn.git"
   },
-  "keywords": [],
-  "author": "ccbikai <ccbikai@qq.com> (http://miantiao.me/)",
+  "keywords": [wxy2049500915..],
+  "author": "ccbikai <2049500915@qq.com> (http://miantiao.me/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ccbikai/cdn/issues"
+    "url": "https://github.com/wxyww2049/cdn/issues"
   },
-  "homepage": "https://github.com/ccbikai/cdn#readme"
+  "homepage": "https://www.wxyww.top"
 }
