--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ccbikai/cdn.git"
+    "url": "git+https://github.com/wxyww2049/cdn.git"
   },
-  "keywords": [wxy2049500915..],
-  "author": "ccbikai <2049500915@qq.com> (http://miantiao.me/)",
+  "keywords": [],
+  "author": "wxyww2049 <2049500915@qq.com> (http://miantiao.me/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/wxyww2049/cdn/issues"
