--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ before_script:
 - git config --global user.email "2049500915@qq.com"
 
 script:
-- git push -f https://$GITHUB_KEY@github.com/$TRAVIS_REPO_SLUG.git `npm version patch -m "%s [ci skip]"`
-- git push -f https://$GITHUB_KEY@github.com/$TRAVIS_REPO_SLUG.git HEAD:master
+- git push -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git `npm version patch -m "%s [ci skip]"`
+- git push -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git HEAD:master
