--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ before_script:
 - git config --global user.email "2049500915@qq.com"
 
 script:
-
+- git push -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git :refs/tags/now 
+- git push -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git now
 - git push -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git HEAD:master
