--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ script:
 - git push -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git :refs/tags/now 
 - git push -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git now
 - git add .
-- git commit -m -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git HEAD:master
+- git commit -m -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git
 - git push -f https://$CI_TOKEN@github.com/wxyww2049/cdn.git HEAD:master
