--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cdn",
-  "version": "blog",
+  "version": "0.0.1",
   "description": "Github 做 CDN 存储，jsDelivr 做 CDN 服务器",
   "main": "index.js",
   "scripts": {
